# alphabet_manipulator

./: README.md  package.xml  rviz_alphabetic_manipulator.rviz  setup.cfg  setup.py
alphabet_manipulator/: controller.py  model.py
config/: controllers.yaml
launch/: main.launch.py
urdf/: bot.urdf
